objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead %28Default%29</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Lead Authorization</fullName>
        </values>
        <values>
            <fullName>Lead Nurturing</fullName>
        </values>
        <values>
            <fullName>Lead Prospect</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Lead Authorization</fullName>
        </values>
        <values>
            <fullName>Lead Nurturing</fullName>
        </values>
        <values>
            <fullName>Lead Prospect</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accel_Employee_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does an Accel Employee own any part of this business?</inlineHelpText>
        <label>Accel Employee Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_of_Business_Years__c</fullName>
        <formula>(TODAY() -Business_Start_Date__c)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by Business Start Date</inlineHelpText>
        <label>Age of Business (Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Business__c</fullName>
        <label>Age of Business (Years)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;3</fullName>
                </value>
                <value>
                    <fullName>3-6</fullName>
                </value>
                <value>
                    <fullName>&gt;6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amusement_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusement Operator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Amusement_Operator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Amusement Operator)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amusement_Operator_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusement Operator (account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Amusement Operator)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Sales Operations Authorization Approval</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bar?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Closed__c</fullName>
        <label>Business Hours: Closed</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Open__c</fullName>
        <label>Business Hours: Open</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Start_Date__c</fullName>
        <label>Business Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Campaign_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Only__c</fullName>
        <label>Cash Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this is an existing Competitor Account, lookup here</inlineHelpText>
        <label>Competitor Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value must be a competitor account</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Competitor Account)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Estimated_Annual_Revenue__c</fullName>
        <formula>Competitor_Account__r.Estimated_Annual_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Estimated Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Live_Date__c</fullName>
        <formula>Competitor_Account__r.Original_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_TO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor TO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor TO</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Roles__c</fullName>
        <label>Contact Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Detail_Report_Matches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Detail Report Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Processor__c</fullName>
        <label>Credit Card Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Last_Activity__c</fullName>
        <label>Last Activity Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dynamic_Session_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dynamic Session Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Owner Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads as Owner</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If &quot;Accel Empolyee Ownership&quot; is checked, please provide employee name</inlineHelpText>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Food_Served__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food Served</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gaming_Experience__c</fullName>
        <inlineHelpText>Hint: PHG = Previously Had Gaming</inlineHelpText>
        <label>Address Gaming History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gaming_Experience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaming_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Field to add the Competitor TO to the Lead. This Field will write to the Competitor TO field of the Account Object when the Lead is converted.</description>
        <label>Gaming Operator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor TO, Competitor TO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Gaming Operator)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Liquor_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Liquor License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hours of Operation</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IGB_License_Status__c</fullName>
        <label>IGB License Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gaming_Experience__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active License</fullName>
                </value>
                <value>
                    <fullName>No longer licensed</fullName>
                </value>
                <value>
                    <fullName>New owners</fullName>
                </value>
                <value>
                    <fullName>Reincorporated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IGB__c</fullName>
        <label>IGB License #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadSourceText__c</fullName>
        <formula>TEXT(LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadSourceText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Authorization_Date__c</fullName>
        <label>Lead Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Authorizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Authorizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Disqualificatino_Reason__c</fullName>
        <label>Lead Disqualification Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Inaccurate Data</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Not a Fit</fullName>
                </value>
                <value>
                    <fullName>Customer Already Identified</fullName>
                </value>
                <value>
                    <fullName>Accel Declined Appointment</fullName>
                    <isActive>false</isActive>
                    <label>Accel Declined Appointment</label>
                </value>
                <value>
                    <fullName>Already Signed with Accel</fullName>
                    <isActive>false</isActive>
                    <label>Already Signed with Accel</label>
                </value>
                <value>
                    <fullName>Bad Lead/Not Viable</fullName>
                    <isActive>false</isActive>
                    <label>Bad Lead/Not Viable</label>
                </value>
                <value>
                    <fullName>Do Not Solicit</fullName>
                    <isActive>false</isActive>
                    <label>Do Not Solicit</label>
                </value>
                <value>
                    <fullName>Do Not Solicit TO</fullName>
                    <isActive>false</isActive>
                    <label>Do Not Solicit TO</label>
                </value>
                <value>
                    <fullName>Incomplete or Invalid Contact Information</fullName>
                    <isActive>false</isActive>
                    <label>Incomplete or Invalid Contact Information</label>
                </value>
                <value>
                    <fullName>Looking for Employment</fullName>
                    <isActive>false</isActive>
                    <label>Looking for Employment</label>
                </value>
                <value>
                    <fullName>No Longer Interested</fullName>
                    <isActive>false</isActive>
                    <label>No Longer Interested</label>
                </value>
                <value>
                    <fullName>Not Interested in Talking</fullName>
                    <isActive>false</isActive>
                    <label>Not Interested in Talking</label>
                </value>
                <value>
                    <fullName>Opportunity Already Assigned</fullName>
                    <isActive>false</isActive>
                    <label>Opportunity Already Assigned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Gen_Type__c</fullName>
        <label>Lead Gen Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Gen_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Manager_Check_Fx__c</fullName>
        <formula>If( $User.Id = Owner:User.Salesforce_Manager__r.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Manager Check Fx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Manager__c</fullName>
        <formula>Owner:User.Salesforce_Manager__r.FirstName + &quot; &quot; + Owner:User.Salesforce_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <label>Lead Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Type__c</fullName>
        <label>Lead Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gaming</fullName>
                    <default>true</default>
                    <label>Gaming</label>
                </value>
                <value>
                    <fullName>Merchant Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Referrer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the Lead came from a Referral, who?</inlineHelpText>
        <label>Lead Referrer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Lead Referrer Name)</relationshipLabel>
        <relationshipName>Leads4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>IF(
ISPICKVAL(Gaming_Experience__c, &quot;Has Gaming&quot;) &amp;&amp; ISPICKVAL(Location_Type__c, &quot;Truck Stop&quot;), &quot;Hot&quot;,
IF(
ISPICKVAL(Gaming_Experience__c, &quot;Has Gaming&quot;) &amp;&amp; NOT(ISPICKVAL( Location_Type__c ,&quot;Truck Stop&quot;)) &amp;&amp; Has_Liquor_License__c = TRUE, &quot;Hot&quot;, 
IF(
NOT(ISPICKVAL(Gaming_Experience__c, &quot;Has Gaming&quot;)) &amp;&amp; Has_Liquor_License__c = TRUE &amp;&amp; Municipality_Allows_Gaming2__c = TRUE, &quot;Hot&quot;,&quot;Cold&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liquor_License_Status__c</fullName>
        <label>State Liquor License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Liquor_License_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <label>Location Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Location_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Accel Establishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Accel_Establishment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Majority_Sharehold_Matches_Liquor_Licens__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Majority Sharehold Matches Liquor License?</inlineHelpText>
        <label>Maj. Sharehold Matches Liquor License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Municipality_Allows_Gaming2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Municipality Allows Gaming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Municipality_State__c</fullName>
        <formula>text(Municipality__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Press enter when searching to ensure you select the municipality with in the correct State</inlineHelpText>
        <label>Municipality</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_POS_Terminals__c</fullName>
        <label>Number of POS Terminals</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking License Availability</fullName>
                </value>
                <value>
                    <fullName>Needs More Time to Think</fullName>
                </value>
                <value>
                    <fullName>Internal Business Discussion Needed</fullName>
                </value>
                <value>
                    <fullName>Funds Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Live_Date__c</fullName>
        <label>Original Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PLEASE_NOTE__c</fullName>
        <formula>&quot;All of the fields below must be filled out in order to submit the lead.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLEASE NOTE:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Parent Account)</relationshipLabel>
        <relationshipName>Leads4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <inlineHelpText>Please check all that apply</inlineHelpText>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect Id</label>
        <referenceTo>Prospect__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_Source__c</fullName>
        <label>Prospect Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Changing_Operator__c</fullName>
        <inlineHelpText>What are their primary reasons for changing their TO</inlineHelpText>
        <label>Reason for Changing Operator</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Machines</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agent</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.Sales_Agent__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Third_Party_Sales_Agent__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Sales Agent</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Acquisition</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Partner Operator</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Amusement Operator</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Terminal Operator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Source Name)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Name_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Name (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Liquor_License_Status__c</fullName>
        <label>State Liquor License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Liquor_License_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Hours__c</fullName>
        <formula>Business_Hours_Closed__c - Business_Hours_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Amusements__c</fullName>
        <label>Type of Amusements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TouchTunes</fullName>
                </value>
                <value>
                    <fullName>Other Juke box</fullName>
                </value>
                <value>
                    <fullName>Sweepstakes machine</fullName>
                </value>
                <value>
                    <fullName>Darts</fullName>
                </value>
                <value>
                    <fullName>Pool table</fullName>
                </value>
                <value>
                    <fullName>Video Games</fullName>
                </value>
                <value>
                    <fullName>Leagues</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Digital content screen (not cable TV)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_POS_System__c</fullName>
        <label>Type of POS System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Established__c</fullName>
        <label>Year Established</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label># Years in Business</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yelp__c</fullName>
        <label>Yelp</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Proposed_VGT__c</fullName>
        <label># of Proposed VGT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_VGTs__c</fullName>
        <label># of VGTs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Alex_P_Leads_Nebraska</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Date_Time_of_Last_Activity__c</columns>
        <columns>Gaming_Experience__c</columns>
        <columns>Gaming_Operator__c</columns>
        <columns>LEAD.CITY</columns>
        <columns>Location_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>John.Plu</value>
        </filters>
        <filters>
            <field>LEAD.STATE</field>
            <operation>notEqual</operation>
            <value>GA</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Disqualified</value>
        </filters>
        <label>Alex P. Leads - Nebraska</label>
        <sharedTo>
            <group>List_Views_NE_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Legal_Name__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Date_Time_of_Last_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>New,In Progress,Converted,Disqualified</value>
        </filters>
        <label>All Open Leads (All States)</label>
        <sharedTo>
            <group>Admin_Users</group>
            <group>List_View_Sales_Leadership</group>
            <group>List_View_Sales_Operation</group>
        </sharedTo>
    </listViews>
</CustomObject>